# ragnordb

./: .gitignore  Cargo.toml  LICENSE
crates/ragnordb-catalog/: Cargo.toml
crates/ragnordb-catalog/src/: lib.rs
crates/ragnordb-cli/: Cargo.toml
crates/ragnordb-cli/src/: main.rs
crates/ragnordb-common/: Cargo.toml  build.rs
crates/ragnordb-common/src/: catalog_codec.rs  codec.rs  command_codec.rs  ids.rs  lib.rs  result.rs  rpc_codec.rs
crates/ragnordb-common/src/proto/: ragnordb.catalog.rs  ragnordb.command.rs  ragnordb.ids.rs  ragnordb.mvcc.rs  ragnordb.row.rs  ragnordb.rpc.rs
crates/ragnordb-common/tests/: smoke.rs
crates/ragnordb-multiraft/: Cargo.toml
crates/ragnordb-multiraft/src/: lib.rs
crates/ragnordb-server/: Cargo.toml  build.rs
crates/ragnordb-server/src/: admin.rs  build_info.rs  config.rs  lib.rs  metrics.rs  protocol.rs  service.rs
crates/ragnordb-sql/: Cargo.toml
crates/ragnordb-sql/src/: lib.rs
crates/ragnordb-storage/: Cargo.toml
crates/ragnordb-storage/src/: lib.rs
crates/ragnordb-tablet/: Cargo.toml
crates/ragnordb-tablet/src/: lib.rs
crates/ragnordb-txn/: Cargo.toml
crates/ragnordb-txn/src/: lib.rs
docs/: architecture.md  raft-integration.md  roadmap.md  storage-format.md  testing.md  transaction-model.md  wal-integration.md
proto/: catalog.proto  command.proto  ids.proto  mvcc.proto  row.proto  rpc.proto
