[package]
name = "ragnordb-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
prost.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
raft.workspace = true
wal.workspace = true
bloom-bloom.workspace = true
