[package]
name = "ragnordb-multiraft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ragnordb-common = { path = "../ragnordb-common" }
ragnordb-tablet = { path = "../ragnordb-tablet" }
raft.workspace = true
wal.workspace = true
